--- a/views/brokerage/orders.ejs
+++ b/views/brokerage/orders.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/dashboard")%>
+<% layout("/layouts/Dashboard")%>
 <div class="main-orders">
     <div class="purchaseS">
         <form method="get" action="/makeOrder">
