--- a/views/stocks/portfolio.ejs
+++ b/views/stocks/portfolio.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="used-margin">
                 <p>Margin used : 0</p>
-                <p>opening balance : 3.74k</p>
+                <p>Opening balance : 3.74k</p>
             </div>
         </div>
     </div>
