--- a/views/brokerage/makeOrder.ejs
+++ b/views/brokerage/makeOrder.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/dashboard")%>
+<% layout("/layouts/Dashboard")%>
 <form method="post" action="/makeOrder" class="needs-validation" novalidate>
   <!-- <div class="mb-3 mt-2">
     <label for="stockName" class="form-label">Enter name of stock to buy</label>
