--- a/views/brokerage/addFunds.ejs
+++ b/views/brokerage/addFunds.ejs
@@ -2,7 +2,7 @@
 <form action="/addFunds" method="post" class="needs-validation" novalidate>
   <div class="mb-3 mt-3">
     <label for="funds-needed" class="form-label">Enter funds</label>
-    <input type="number" class="form-control" id="funds" aria-describedby="fundsHelp" name="newFunds" required>
+    <input type="number" step="0.01" class="form-control" id="funds" aria-describedby="fundsHelp" name="newFunds" required>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
